<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="subtitulo">Salud y rendimiento</string>
    <string name="cd_header">Ilustración de salud/fitness</string>

    <string name="peso_label">Peso (kg)</string>
    <string name="hint_peso">Ej: 67.5</string>
    <string name="altura_label">Altura (cm)</string>
    <string name="hint_altura">Ej: 160</string>
    <string name="btn_calcular">Calcular IMC</string>

    <string name="cat_bajo_peso">Bajo peso</string>
    <string name="cat_normal">Peso normal</string>
    <string name="cat_sobrepeso">Sobrepeso</string>
    <string name="cat_obesidad">Obesidad</string>

    <string name="tip_bajo_peso">Sugerencia: aumenta la ingesta calórica y consulta con un profesional.</string>
    <string name="tip_normal">¡Bien! Mantene 2–3 entrenamientos por semana y alimentacion equilibrada.</string>
    <string name="tip_sobrepeso">Tip: suma caminatas diarias y controlá porciones.</string>
    <string name="tip_obesidad">Tip: consulta con un profesional y progresa con baja intensidad.</string>


    <string name="inicio_title">Bienvenido a IMC</string>
    <string name="inicio_subtitle">Tu compañero de salud y bienestar</string>
    <string name="inicio_button">Comenzar</string>


    <string name="historial_title">Historial de Cálculos</string>
    <string name="historial_empty">No hay cálculos guardados aún.\nRealizá tu primer cálculo en la pantalla principal.</string>
    <string name="historial_item_format">IMC: %1$s - %2$s</string>
    <string name="historial_fecha_format">%1$s</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_limpiar_historial">Limpiar Historial</string>
    <string name="btn_ver_historial">Ver Historial</string>
    <string name="historial_limpiado">Historial eliminado</string>
    <string name="calculo_guardado">Cálculo guardado en el historial</string>
</resources>
