<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/rootConstraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/headerLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/imc_header"
            android:contentDescription="@string/cd_header" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvSubtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- IMC -->
    <LinearLayout
        android:id="@+id/resultContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@drawable/bg_result_container"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/headerLinear"
        app:layout_constraintStart_toStartOf="@id/headerLinear"
        app:layout_constraintEnd_toEndOf="@id/headerLinear"
        tools:background="@color/imc_bad">

        <TextView
            android:id="@+id/tvImcGigante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:visibility="gone"
            tools:text="22.8"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@null"
            tools:text="Peso normal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dynamicContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/resultContainer"
        app:layout_constraintStart_toStartOf="@id/headerLinear"
        app:layout_constraintEnd_toEndOf="@id/headerLinear"/>

<!--     Formulario -->

    <LinearLayout
        android:id="@+id/formLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/headerLinear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/headerLinear"
        app:layout_constraintTop_toBottomOf="@id/dynamicContainer"
        app:layout_goneMarginTop="180dp">

        <TextView
            android:id="@+id/tvPesoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso_label" />

        <EditText
            android:id="@+id/etPeso"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:autofillHints=""
            android:hint="@string/hint_peso"
            android:inputType="numberDecimal" />


        <TextView
            android:id="@+id/tvAlturaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/altura_label" />

        <EditText
            android:id="@+id/etAltura"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/hint_altura"
            android:inputType="numberDecimal"
            android:autofillHints=""/>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/btn_calcular" />

        <Button
            android:id="@+id/btnVerHistorial"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/btn_ver_historial" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
